adding mobile design to the header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+ 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
@@ -18,10 +22,14 @@
 <body>
   <header>
     <div class="header-container"> 
+      <div class="blogr-mobile">
+        <img src="/images/logo.svg" class="" alt="">
+          <i class="glyphicon glyphicon-remove"></i>
+          <i class="material-icons">menu</i>
+      </div>
       <div class="nav-container">
         <div class="main-nav">
         <img src="/images/logo.svg" class="blogr" alt="">
-      
         <div class="dropdown">
           <a href="#" class="dropbtn">Product
           <svg xmlns="http://www.w3.org/2000/svg" width="10" height="7"><path fill="none" stroke="white" stroke-width="2" d="M1 1l4 4 4-4"/></svg>
