added more styles and added the js part

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <!-- body 2nd section  -->
   <div class="body2-container">
     <div class="phones">
-      <img width="350px" height="350px" src="/images/illustration-phones.svg" alt="">
+      <img class="phones-cover" width="350px" height="350px" src="/images/illustration-phones.svg" alt="">
     </div>
     <div class="body2-text">
       <h3>State of the Art Infrastructure</h3>
@@ -180,5 +180,6 @@
   <div class="attribution">
     Coded by <a href="#">Luke Chidubem</a>.
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
